# Qwidi

./: .gitignore  README.md
backend/: CHANGELOG.md  backend.cabal
backend/app/: Application.hs  Main.hs  Routes.hs
backend/app/Routes/: Ping.hs
frontend/: .eslintrc.json  .prettierrc  package-lock.json  package.json
frontend/src/: App.jsx  index.jsx  routes.jsx
frontend/src/components/: AppRoute.jsx
frontend/src/pages/: ClothesCard.jsx
frontend/src/store/: ClothesStore.jsx  UserStore.jsx
frontend/src/utils/: const.jsx
