cabal-version:      3.0
name:               backend
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             JktuJQ
maintainer:         odmamontov@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable backend
    import:           warnings
    main-is:          Main.hs
    other-modules:    Application
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1

                    , time
                    
                    -- Parsing
                    , text
                    , aeson
 
                    -- Web
                    ,  wai
                    , warp

                    , servant
                    , servant-server

    hs-source-dirs:   app
    default-language: Haskell2010
